// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavItem > should render the component as HTMLAnchorElement with active state 1`] = `
<DocumentFragment>
  <a
    aria-current="true"
    class="mocked-styled-2 el-nav-item-anchor"
    href="#"
  >
    <span
      class="mocked-styled-0 el-nav-item-label-container"
    >
      Label
    </span>
  </a>
</DocumentFragment>
`;

exports[`NavItem > should render the component as HTMLAnchorElement with default state 1`] = `
<DocumentFragment>
  <a
    class="mocked-styled-2 el-nav-item-anchor"
    href="#"
  >
    <span
      class="mocked-styled-0 el-nav-item-label-container"
    >
      Label
    </span>
  </a>
</DocumentFragment>
`;

exports[`NavItem > should render the component as HTMLButtonElement with active state 1`] = `
<DocumentFragment>
  <button
    aria-current="true"
    class="mocked-styled-1 el-nav-item-button"
  >
    <span
      class="mocked-styled-0 el-nav-item-label-container"
    >
      Label
    </span>
  </button>
</DocumentFragment>
`;

exports[`NavItem > should render the component as HTMLButtonElement with default state 1`] = `
<DocumentFragment>
  <button
    aria-current="true"
    class="mocked-styled-1 el-nav-item-button"
  >
    <span
      class="mocked-styled-0 el-nav-item-label-container"
    >
      Label
    </span>
  </button>
</DocumentFragment>
`;
